@@ -1,5 +1,9 @@
 2009-01-07  Michal Ludvig  <michal@logix.cz>
 
+	* S3/ACL.py: Generate XML from a current list of Grantees
+
+2009-01-07  Michal Ludvig  <michal@logix.cz>
+
 	* S3/ACL.py: Keep ACL internally as a list of of 'Grantee' objects.
 	* S3/Utils.py: Fix crash in stripNameSpace() when the XML has no NS.
 
